# fil-one

./: .gitignore  .gitleaks.toml  .gitmodules  .oxfmtrc.json  .oxfmtrc.jsonc  .semgrep.yml  .trivyignore  LICENSE.md  README.md  foundry.toml  oxlint.config.ts  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  slither.config.json  sst-env.d.ts  sst.config.ts  tsconfig.base.json
tests/s3compat/: .gitignore  README.md  aurora_key_management.py  aurora_s3_bridge.py  client.py  compatibility_test.py  console_presign_test.py  create_bucket.py  delete.py  env.example  generate_ceph_conf.py  load_test.py  logger.py  pyproject.toml  report.py  requirements.txt  upload.py
tests/s3compat/akave/: manifest.json  report-2026-04-15.md  report-2026-04-16.md
tests/s3compat/akave/logs/: 20260415_152339_upload_success.jsonl  20260415_152508_fetch_success.jsonl  20260415_152523_delete_errors.jsonl  20260415_152629_compatibility_pytest_raw.json  20260416_160040_compatibility_pytest_raw.json  20260416_174711_compatibility_pytest_main.json  20260416_174711_compatibility_pytest_quarantine.json  20260417_170222_console_presign_errors.jsonl  20260417_170222_console_presign_success.jsonl  20260421_153000_console_presign_errors.jsonl  20260421_153000_console_presign_success.jsonl
tests/s3compat/akave/reports/: 20260415_152339_upload_report.txt  20260415_152508_fetch_report.txt  20260415_152523_delete_report.txt  20260415_152629_compatibility_report.txt  (+4 more)
tests/s3compat/aurora/: manifest.json
tests/s3compat/fth/: manifest.json  report-2026-04-21.md
(+157 files in other folders)
